notification-email-order-to-admin

--- a/resources/sass/category.scss
+++ b/resources/sass/category.scss
@@ -59,3 +59,12 @@
 .deletefavorite {
     color: #ad1707;
 }
+#media {
+    margin-left: 10px;
+}
+#avatar {
+    width: 50px; height: 50px
+}
+#logout-form {
+    display: none;
+}
